Fix(Screen): overflow: scroll to see card details

--- a/src/screens/Screen.css
+++ b/src/screens/Screen.css
@@ -132,6 +132,7 @@ img {
   width: 50%;
   transform-origin: left;
   transform: rotateY(90deg);
+  overflow: scroll;
 }
 
 .details-text {
